Controller advice documents ApiResponse on every operation, even if the operation does not annotate the exception to be thrown. Fixes #2483